# EleosRef

./: Cargo.toml  README.md  test.csv
data/: teams.json  wedstrijden.xlsx  ~$wedstrijden.xlsx
results/: efficiency.py  schedule.csv  schedule_csved.csv
src/: main.rs
src/models/: availability.rs  excel_match.rs  matches.rs  mod.rs  team.rs
src/parser/: excel.rs  export.rs  filter.rs  json.rs  mod.rs
src/scheduler/: _scheduler.rs  scheduler.rs
src/utils/: date.rs  hash.rs  mod.rs  time.rs
